src/test/ui/borrowck/borrowck-uninit-ref-chain.mir.stderr
error[E0381]: borrow of possibly uninitialized variable: `**x`
  --> $DIR/borrowck-uninit-ref-chain.rs:21:14
   |
LL |     let _y = &**x; //[ast]~ ERROR use of possibly uninitialized variable: `**x` [E0381]
   |              ^^^^ use of possibly uninitialized `**x`

error[E0381]: borrow of possibly uninitialized variable: `**x`
  --> $DIR/borrowck-uninit-ref-chain.rs:25:14
   |
LL |     let _y = &**x; //[ast]~ ERROR use of possibly uninitialized variable: `**x` [E0381]
   |              ^^^^ use of possibly uninitialized `**x`

error[E0381]: borrow of possibly uninitialized variable: `**x`
  --> $DIR/borrowck-uninit-ref-chain.rs:29:14
   |
LL |     let _y = &**x; //[ast]~ ERROR use of possibly uninitialized variable: `**x` [E0381]
   |              ^^^^ use of possibly uninitialized `**x`

error[E0718]: cannot assign to `a.x` when `a` is not initialized
  --> $DIR/borrowck-uninit-ref-chain.rs:34:5
   |
LL |     a.x = 0;
   |     ^^^^^^^

error[E0718]: cannot assign to `a.x` when `a` is not initialized
  --> $DIR/borrowck-uninit-ref-chain.rs:39:5
   |
LL |     a.x = &&0;
   |     ^^^^^^^^^

error[E0718]: cannot assign to `a.x` when `a` is not initialized
  --> $DIR/borrowck-uninit-ref-chain.rs:45:5
   |
LL |     a.x = 0;
   |     ^^^^^^^

error[E0381]: borrow of possibly uninitialized variable: `a.y`
  --> $DIR/borrowck-uninit-ref-chain.rs:46:14
   |
LL |     let _b = &a.y; //[ast]~ ERROR use of possibly uninitialized variable: `a.y` [E0381]
   |              ^^^^ use of possibly uninitialized `a.y`

error[E0718]: cannot assign to `a.x` when `a` is not initialized
  --> $DIR/borrowck-uninit-ref-chain.rs:50:5
   |
LL |     a.x = &&0;
   |     ^^^^^^^^^

error[E0381]: borrow of possibly uninitialized variable: `**a.y`
  --> $DIR/borrowck-uninit-ref-chain.rs:51:14
   |
LL |     let _b = &**a.y; //[ast]~ ERROR use of possibly uninitialized variable: `**a.y` [E0381]
   |              ^^^^^^ use of possibly uninitialized `**a.y`

error: aborting due to 9 previous errors

Some errors occurred: E0381, E0718.
For more information about an error, try `rustc --explain E0381`.
